@@ -1,5 +1,5 @@
 ######################################################################
-    Log::Log4perl 0.16
+    Log::Log4perl 0.17
 ######################################################################
 
 NAME
@@ -9,9 +9,11 @@ DESCRIPTION
     `Log::Log4perl' implements the widely popular `Log4j' logging package
     ([1]) in pure Perl.
 
+    *** WARNING: ALPHA SOFTWARE ***
+
     A WORD OF CAUTION: THIS LIBRARY IS STILL UNDER CONSTRUCTION -- ON
     http://log4perl.sourceforge.net YOU'LL GET THE LATEST SCOOP. THE API HAS
-    REACHED A MATURE STATE, WE WILL NOT CHANGE UNLESS FOR A GOOD REASON.
+    REACHED A MATURE STATE, WE WILL NOT CHANGE IT UNLESS FOR A GOOD REASON.
 
     Logging beats a debugger when you want to know what's going on in your
     code during runtime. However, traditional logging packages are too
@@ -252,7 +254,7 @@ How to use it
     `Log::Dispatch':
 
            Log::Dispatch::ApacheLog
-           Log::Dispatch::DBI
+           Log::Dispatch::DBI (by Tatsuhiko Miyagawa)
            Log::Dispatch::Email,
            Log::Dispatch::Email::MailSend,
            Log::Dispatch::Email::MailSendmail,
@@ -261,7 +263,7 @@ How to use it
            Log::Dispatch::Handle
            Log::Dispatch::Screen
            Log::Dispatch::Syslog
-           Log::Dispatch::Tk
+           Log::Dispatch::Tk (by Dominique Dumont)
 
     Now let's assume that we want to go overboard and log `info()' or higher
     prioritized messages in the `My::Category' class to both STDOUT and to a
@@ -307,16 +309,16 @@ How to use it
     *string* to `Log::Log4perl::Appender' in the *first* argument. Behind
     the scenes, `Log::Log4perl::Appender' will create the necessary
     `Log::Dispatch::*' object and pass along the name value pairs we
-    provided to `Log::Log4perl::Appender-'new()> after the first argument.
+    provided to `Log::Log4perl::Appender->new()' after the first argument.
 
     The `name' value is optional and if you don't provide one,
-    `Log::Log4perl::Appender-'new()> will create a unique one for you. The
+    `Log::Log4perl::Appender->new()' will create a unique one for you. The
     names and values of additional parameters are dependent on the
     requirements of the particular `Log::Dispatch::*' class and can be
     looked up in their manual pages.
 
     On a side note: In case you're wondering if
-    `Log::Log4perl::Appender-'new()> will also take care of the `min_level'
+    `Log::Log4perl::Appender->new()' will also take care of the `min_level'
     argument to the `Log::Dispatch::*' constructors called behind the scenes
     -- yes, it does. This is because we want the `Log::Dispatch' objects to
     blindly log everything we send them (`debug' is their lowest setting)
@@ -497,6 +499,10 @@ How to use it
             %p Priority of the logging event
             %r Number of milliseconds elapsed from program start to logging event
             %% A literal percent (%) sign
+
+    All placeholders are quantifiable, just like in *printf*. Following this
+    tradition, `%-20c' will reserve 20 chars for the category and
+    right-justify it.
 
     Layouts are objects, here's how you create them:
 
