@@ -4,6 +4,7 @@ Revision history for Log::Log4perl
 
 0.17 07/11/2002
     * Updated documentation according to Dave Rolsky's suggestions
+    * Introduced experimental ':shortcuts' feature
 
 0.16 07/10/2002
     * Updated documentation for CPAN release
